--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Inventory-Management
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5433/inventory_management
 spring.datasource.username = postgres
-spring.datasource.password = Rohith@18
+spring.datasource.password = password
 
 
 spring.jpa.hibernate.ddl-auto = none
